Added lorem ipsum text amd bg-color

--- a/style.css
+++ b/style.css
@@ -108,3 +108,7 @@
     background-color: #0186ba;
     background-image: linear-gradient(#04acec, #0186ba);
 }
+
+body {
+    background-color: 61717A;
+}
